Consertar exibicao do resultado

--- a/index.html
+++ b/index.html
@@ -40,38 +40,38 @@
   <script type="text/javascript">
 
     function doAdd(){
-        var aObj = document.getElementByld("a");
-        var bObj = document.getElementByld("b");
-        var resultObj = document.getElementByld("result");
+        var aObj = document.getElementById("a");
+        var bObj = document.getElementById("b");
+        var resultObj = document.getElementById("result");
         var a = parseInt(aObj.value); //converte string em inteiro//* 
         var b = parseInt(bObj.value);
         resultObj.innerHTML =a+b;
     }
 
     function doSub(){
-        var aObj = document.getElementByld("a");
-        var bObj = document.getElementByld("b");
-        var resultObj = document.getElementByld("result");
+        var aObj = document.getElementById("a");
+        var bObj = document.getElementById("b");
+        var resultObj = document.getElementById("result");
         var a = parseInt(aObj.value);
-        var = b parseInt(bObj.value);
+        var b = parseInt(bObj.value);
         resultObj.innerHTML =a-b;
     }
     
     function doMultiply(){
-        var aObj = document.getElementByld("a");
-        var bObj = document.getElementByld("b");
-        var resultObj = document.getElementByld("result");
+        var aObj = document.getElementById("a");
+        var bObj = document.getElementById("b");
+        var resultObj = document.getElementById("result");
         var a = parseInt(aObj.value);
-        var = b parseInt(bObj.value);
+        var b = parseInt(bObj.value);
         resultObj.innerHTML =a*b;
     }
 
     function doDivide(){
-        var aObj = document.getElementByld("a");
-        var bObj = document.getElementByld("b");
-        var resultObj = document.getElementByld("result");
+        var aObj = document.getElementById("a");
+        var bObj = document.getElementById("b");
+        var resultObj = document.getElementById("result");
         var a = parseInt(aObj.value);
-        var = b parseInt(bObj.value);
+        var b = parseInt(bObj.value);
         resultObj.innerHTML =a/b;
     }
   </script>
